[package]
name = "blindsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.6.4", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.6.4", features = [
    "boolean",
    "shortint",
    "integer",
    "x86_64-unix",
] }
[dependencies]

bincode = "1.3.3"
revolut = { git = "https://github.com/sofianeazogagh/revoLUT.git", tag = "v0.1.0" }
itertools = "0.13.0"
